<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.info.InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/bantuan"
        android:orientation="vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="230dp"
        android:background="@drawable/background1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/avenir_bold"
            android:text="@string/bantuan"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:id="@+id/hotline"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:focusable="true">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/bantuan1"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/avenir_medium"
                android:text="@string/hotline_covid_19"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/arrow"
                android:contentDescription="@string/todo" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/petaRumahSakit"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:focusable="true">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_local_hospital"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/avenir_medium"
                android:text="@string/peta_rumah_sakit_rujukan"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/arrow"
                android:contentDescription="@string/todo" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>