<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/kenali"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="230dp"
                android:background="@drawable/background1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="8dp"
                    tools:ignore="UnknownIdInLayout">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="15dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/coronavirus"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginBottom="20dp"
                            android:fontFamily="@font/avenir_bold"
                            android:text="@string/info_covid_19"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="15sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView4"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/avenir_medium"
                            android:text="@string/info_terbaru_virus_corona"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView4"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cvViewVirus"
                            android:layout_width="70dp"
                            android:layout_height="35dp"
                            android:layout_marginStart="280dp"
                            app:cardBackgroundColor="@color/colorPrimary"
                            app:cardCornerRadius="3dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/avenir_medium"
                                android:text="@string/view"
                                android:textColor="@android:color/white"
                                android:textSize="12sp" />
                        </androidx.cardview.widget.CardView>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="26dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/avenir_bold"
                            android:text="@string/yuk_cari_tau_lebih_jauh"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/avenir_medium"
                            android:text="@string/tentang_virus_covid_19"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:id="@+id/mengenal"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/background"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/informasi1" />

                            <TextView
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/avenir_medium"
                                android:text="@string/mengenal"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="15sp" />

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:src="@drawable/arrow" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/mencegah"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/background"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/informasi2" />

                            <TextView
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/avenir_medium"
                                android:text="@string/mencegah"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="15sp" />

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/arrow" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/mengobati"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/background"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/informasi3" />

                            <TextView
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/avenir_medium"
                                android:text="@string/mengobati"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="15sp" />

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/arrow" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/mengantisipasi"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/background"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/informasi4" />

                            <TextView
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/avenir_medium"
                                android:text="@string/mengantisipasi"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="15sp" />

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/arrow" />
                        </LinearLayout>

                    </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>